Fixed hero image clipping

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,11 @@ body {
 }
 
 .hero {
-    min-height: 90vh;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(11, 12, 21));
+    min-height: 130vh;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(11, 12, 21)), url('../assets/images/hero.jpg') no-repeat center center;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
 }
 
 .hero-title {
@@ -16,13 +19,6 @@ body {
     margin-top: 20%;
     margin-left: 5%;
     padding: 0;
-}
-
-.hero-image {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    z-index: -1;
 }
 
 .typed-cursor {
